--- a/cordova/www/example.html
+++ b/cordova/www/example.html
@@ -17,8 +17,8 @@ NOTE:
 */       
         <!--<script type="text/javascript" charset="utf-8" src="cordova-2.2.0.js"></script>-->
         <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
-        <script type="text/javascript" charset="utf-8" src="jquery_1.5.2.min.js"></script>
-        <script type="text/javascript" src="PushNotification.js"></script>
+        <script type="text/javascript" charset="utf-8" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/PushNotification.js"></script>
         
         <script type="text/javascript">
             var pushNotification;
