--- a/cordova/www/example.html
+++ b/cordova/www/example.html
@@ -17,6 +17,8 @@ NOTE:
 */       
         <!--<script type="text/javascript" charset="utf-8" src="cordova-2.2.0.js"></script>-->
         <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+		<script type="text/javascript" charset="utf-8" src="js/device.js"></script>
+		<script type="text/javascript" charset="utf-8" src="js/Media.js"></script>
         <script type="text/javascript" charset="utf-8" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/PushNotification.js"></script>
         
